# paste-bar-code

./: .gitignore  README.md  generate_beep.py  main.spec  pyproject.toml
.github/workflows/: release.yml
src/: app.py  configs.py  detect_code.py  file_system.py  main.py  main_window.py  version.py
src/capture_api/: __init__.py  capture_api.py  capturer_abc.py  capturers.py  flask_capturer.py  local_capturer.py
src/flask_app/: __init__.py  cert.pem  key.pem
src/templates/: camera_stream.html
src/ui/: beep_sound.py  main_window.py
src/ui/widgets/: __init__.py  _button.py  _timer_line_edit_widget.py  detection_indicator.py  frame_label.py
