[project]
name = "paste-bar-code"
description = ""
version = "0.0.1"
requires-python = ">=3.13,<3.14"
dependencies = [
    "cv2-enumerate-cameras>=1.3.0",
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pyside6>=6.10.1",
    "pyzbar>=0.1.9",
]

[tool.ruff]
line-length = 100
select = ["I"]

[dependency-groups]
dev = [
    "pyside-widget-reloader>=0.0.3",
]
